--- a/index.html
+++ b/index.html
@@ -4,10 +4,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Penktadienio testas</title>
+    <link rel="stylesheet" href="./home.css">
 </head>
 <body>
-    labas ka tu
+    <div class="backraund-color">
+        <div class="withe">
+            <h1>Get In Touch</h1>
+            <div class="lentele">
+                <div class="lentele0">
+                    <div>
+                        <input class="first" id="username" type="text" placeholder="First Name">
+                    </div>
+                    <div>
+                        <input class="last" id="username" type="text" placeholder="Last Name">
+                    </div>
+                </div>
+                <div class="lentele1">
+                    <div>
+                        <input class="email" id="username" type="text" placeholder="Email Name">
+                    </div>
+                    <div>
+                        <input class="phone" id="username" type="text" placeholder="Phone Name">
+                    </div>
+                </div>
+                <div class="lentele2">
+                    <div>
+                        <input class="address" id="username" type="text" placeholder="Address">
+                    </div>
+                    <div>
+                        <input class="message" id="username" type="text" placeholder="Type your message here">
+                    </div>
+                </div>
+            </div>
+            <div class="submit">
+                <a href="#">Submit</a>
+            </div>
+            <div>
+                <p>Thanks for submitting!</p>
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
