--- a/index.html
+++ b/index.html
@@ -14,31 +14,32 @@
             <div class="lentele">
                 <div class="lentele0">
                     <div>
-                        <input class="first" id="username" type="text" placeholder="First Name">
+                        <input class="first" id="username" type="text" placeholder="First Name" required>
                     </div>
                     <div>
-                        <input class="last" id="username" type="text" placeholder="Last Name">
+                        <input class="last" id="username" type="text" placeholder="Last Name" required>
                     </div>
                 </div>
                 <div class="lentele1">
                     <div>
-                        <input class="email" id="username" type="text" placeholder="Email Name">
+                        <input class="email" id="username" type="email" placeholder="Email Name" required>
                     </div>
                     <div>
-                        <input class="phone" id="username" type="text" placeholder="Phone Name">
+                        <input class="phone" id="username" type="tel" placeholder="Phone Name" required>
                     </div>
                 </div>
                 <div class="lentele2">
                     <div>
-                        <input class="address" id="username" type="text" placeholder="Address">
+                        <input class="address" id="username" type="text" placeholder="Address" required>
                     </div>
                     <div>
-                        <input class="message" id="username" type="text" placeholder="Type your message here">
+                        <textarea class="message"placeholder="Type your message here" id="msg_msg" cols="30" rows="3" required></textarea>
                     </div>
                 </div>
             </div>
             <div class="submit">
-                <a href="#">Submit</a>
+                <button type="submit">Submit</button>
+    
             </div>
             <div>
                 <p>Thanks for submitting!</p>
